--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,29 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "./blog" # the subpath of your site, e.g. /blog
-url: "https://ecasdqina.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://ecasdqina.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Lemma299
 github_username:  ecasdqina
 
 # Build settings
+excerpt_separator: "<!-- more -->"
+about: >-
+  VOICEROID が好き．
+  Twitter: <a href="https://twitter.com/Lemma299">Lemma299</a>
+  AtCoder: <a href="https://atcoder.jp/users/ecasdqina">ecasdqina</a>
+  Codeforces: <a href="http://codeforces.com/profile/kiritan">kiritan</a>
 markdown: kramdown
-theme: minima
 plugins:
-  - jekyll-feed
+- jekyll-paginate
+exclude:
+  - .jekyll-metadata
+  - README.md
+  - CNAME
+paginate: 5
+paginate_path: "/:num/"
+highlighter: rouge
+permalink: pretty
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
