--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: WEIGHTED
 email: ecasdqina@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Nothing:(
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://ecasdqina.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Lemma299
@@ -27,10 +25,10 @@ github_username:  ecasdqina
 # Build settings
 excerpt_separator: "<!-- more -->"
 about: >-
-  VOICEROID が好き．
   Twitter: <a href="https://twitter.com/Lemma299">Lemma299</a>
   AtCoder: <a href="https://atcoder.jp/users/ecasdqina">ecasdqina</a>
   Codeforces: <a href="http://codeforces.com/profile/kiritan">kiritan</a>
+  niconico: <a href="https://t.co/Xxyoq8wFpm?amp=1">AC_Lay</a>
 markdown: kramdown
 plugins:
 - jekyll-paginate
